[package]
name = "rust_machine_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.10.0"
tikv-jemallocator = "0.5"

[profile.release]
codegen-units = 1
lto = false